# fmp_client

./: .gitignore  README.md  fmp_cache.sqlite  pyproject.toml
src/fmp_client/: __init__.py  client.py
tests/: __init__.py  conftest.py  sample_data.py  test_client.py
